syntax = "proto3";

package com.quick.voice.proto;

option java_package = "com.quick.player.proto";
option go_package = "com.quick.player.proto";
option java_outer_classname = "CdnData";
option swift_prefix = "Cdn";


// 请求
message SeiData {
    EventType event = 1;
    bytes data = 2;
    bool compress = 3;
    int32 version = 4;
}


enum EventType {
    // 布局事件
    Layout = 0;

    // 自定义数据事件
    Custom = 1;
}


message LayoutData {
    string roomId = 1;
    LayoutType type = 2;
    map<string, UserInfo> userMap = 3;
    optional CustomInfo globalCustom = 4;
}

message UserInfo {
    string id = 1;
    repeated AudioInfo audios = 2;
    repeated VideoInfo videos = 3;
    optional CustomInfo custom = 4;
}


message AudioInfo {
    AudioType type = 1;
    bool isEnable = 2;
    bool isMute = 3;
    double volume = 4;
    optional int64 updateTime = 5;
}

message VideoInfo {
    VideoType type = 1;
    bool isEnable = 2;
    bool isMute = 3;
    int32 width = 4;
    int32 height = 5;
    int32 x = 6;
    int32 y = 7;
    optional int64 updateTime = 8;
}

message CustomInfo {
    string roomId = 1;
    map<string, string> customKeyMap = 2;
    optional int64 updateTime = 3;
}


// CDN布局类型
enum LayoutType {
    AudioAndVideo = 0;
    OnlyAudio = 1;
    OnlyVideo = 2;
}


enum AudioType {
    // 麦克风
    Microphone = 0;
    // 系统声音
    SystemVoice = 1;
}


enum VideoType {
    //摄像头
    Camera = 0;
    //屏幕
    Screen = 1;
}



